# deepin-home

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  deepin-home-daemon.desktop  deepin-home.desktop  linglong.yaml
.obs/: workflows.yml
.reuse/: dep5
.tx/: config  transifex.yaml  translate_ts2desktop.sh
debian/: changelog  control  copyright  deepin-home.postinst  rules
docs/: design.zh_CN.md
src/: CMakeLists.txt
src/api/: CMakeLists.txt  api.cpp  api.h  diskCacheShare.cpp  diskCacheShare.h  getFeedbackParam.h
src/base/: const.h
src/dbusservice/: com.deepin.Home.Daemon.service  com.deepin.Home.Daemon.service.in  com.deepin.Home.Daemon.xml  com.deepin.deepinid.Client.xml  com.deepin.deepinid.xml  org.desktopspec.ApplicationManager1.Application.xml  org.freedesktop.DBus.Properties.xml
src/main/: CMakeLists.txt  account.cpp  account.h  api.cpp  api.h  daemon.cpp  daemon.h  home-daemon.cpp  home-daemon.h  homeDaemon.cpp  homeDaemon.h  main.cpp
src/maincomponentplugin/: CMakeLists.txt  apiproxy.cpp  apiproxy.h  main.qml  maincomponent.qrc  maincomponentplugin.cpp  maincomponentplugin.h  network.cpp  network.h  promise.cpp  promise.h  worker.cpp  worker.h
src/maincomponentplugin/MyTitleBar/: MyTitleBar.qml
src/maincomponentplugin/api/: API.qml  qmldir
src/maincomponentplugin/article/: Article.qml
src/maincomponentplugin/feedback/: Card.qml  Detail.qml  Filter.qml  List.qml  Status.qml  Submit.qml
src/maincomponentplugin/images/: deepin-home.dci
src/maincomponentplugin/index/: Card1.qml  Card2.qml  Card3.qml  Carousel.qml  ContactModel.qml  Index.qml
src/maincomponentplugin/list/: List.qml  NotFound.qml  Notify.qml  NotifyDetail.qml  Questionnaire.qml
src/maincomponentplugin/offline/: Offline.qml
src/maincomponentplugin/router/: Router.qml  qmldir
src/maincomponentplugin/titlebar/: AccountButton.qml  MyTitleBar.qml  NotifyButton.qml  TabButton.qml
src/maincomponentplugin/widgets/: Avatar.qml  Loading.qml
src/preloadplugin/: CMakeLists.txt  Preload.qml  plugin.json  preloadplugin.cpp
translations/: deepin-home-daemon.qrc  deepin-home-daemon.ts  deepin-home.qrc  deepin-home.ts  desktop.ts  pull  push  ts2desktop  update
translations/deepin-home/: ady.ts  af.ts  ak.ts  am_ET.ts  ar.ts  ar_EG.ts  ast.ts  ast_ES.ts  az.ts  bg.ts  bn.ts  bo.ts  bqi.ts  br.ts  bs_BA.ts  ca.ts  ca_ES.ts  ckb.ts  cs.ts  da.ts  de.ts  de_DE.ts  el.ts  el_GR.ts  en_AU.ts  en_CA.ts  en_GB.ts  eo.ts  es.ts  es_419.ts  es_AR.ts  es_CO.ts  es_ES.ts  es_MX.ts  et.ts  eu.ts  fa.ts  fa_IR.ts  fi.ts  fil.ts  (+66 more)
translations/deepin-home-daemon/: ady.ts  af.ts  ak.ts  am_ET.ts  ar.ts  ar_EG.ts  ast.ts  ast_ES.ts  az.ts  bg.ts  bn.ts  bo.ts  bqi.ts  br.ts  bs_BA.ts  ca.ts  ca_ES.ts  ckb.ts  cs.ts  da.ts  de.ts  de_DE.ts  el.ts  el_GR.ts  en_AU.ts  en_CA.ts  en_GB.ts  eo.ts  es.ts  es_419.ts  es_AR.ts  es_CO.ts  es_ES.ts  es_MX.ts  et.ts  eu.ts  fa.ts  fa_IR.ts  fi.ts  fil.ts  (+66 more)
translations/deepin-home-desktop/: desktop_ady.ts  desktop_af.ts  desktop_ak.ts  desktop_am_ET.ts  desktop_ar.ts  desktop_ar_EG.ts  desktop_ast.ts  desktop_az.ts  desktop_bg.ts  desktop_bn.ts  desktop_bqi.ts  desktop_br.ts  desktop_ca.ts  desktop_ckb.ts  desktop_cs.ts  desktop_da.ts  desktop_de.ts  desktop_el.ts  desktop_en_AU.ts  desktop_en_CA.ts  desktop_en_GB.ts  desktop_eo.ts  desktop_es.ts  desktop_es_CO.ts  desktop_es_MX.ts  desktop_et.ts  desktop_eu.ts  desktop_fa.ts  desktop_fi.ts  desktop_fil.ts  desktop_fr.ts  desktop_gl_ES.ts  desktop_he.ts  desktop_hi_IN.ts  desktop_hr.ts  desktop_hu.ts  desktop_hy.ts  desktop_id.ts  desktop_it.ts  desktop_ja.ts  (+49 more)
